Entre a la vista Formulario y cree el formulario y sus campos con html helper y el metodo lambda, mas los dos inputs para cargar documentos y el boton de enviar. Se agrego otro action en el controlador Form llamado Datos y una vista que lleva el mismo nombre. Ademas se modifico el nav del layout para que dirijan a las dos vistas nuevas.

--- a/TareaProg4/TareaProg4.csproj
+++ b/TareaProg4/TareaProg4.csproj
@@ -247,6 +247,7 @@
     <Content Include="Views\PelisCategorias\Drama.cshtml" />
     <Content Include="Views\PelisCategorias\Infantil.cshtml" />
     <Content Include="Views\PelisCategorias\Documental.cshtml" />
+    <Content Include="Views\Form\Datos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
