Elimine register y login del nav bar, en el app start route confighice que la pagina comience con el formulario. Cree un nuevo controlador llamado conversorcontroller, un action y una vista llamados opciones, agregue la vista opciones en el nav bar. Dentro de la vista opciones coloque 4 imagenes que representan el menu para entrar al tipo de conversion que el usuario quiera realizar. Ademas cree una carpeta llamada CSS y un documento llamado style.css que afecta la vista opciones.

--- a/TareaProg4/TareaProg4.csproj
+++ b/TareaProg4/TareaProg4.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContenidoController.cs" />
+    <Compile Include="Controllers\ConversorController.cs" />
     <Compile Include="Controllers\FormController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -188,6 +189,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="CSS\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -248,6 +250,7 @@
     <Content Include="Views\PelisCategorias\Infantil.cshtml" />
     <Content Include="Views\PelisCategorias\Documental.cshtml" />
     <Content Include="Views\Form\Datos.cshtml" />
+    <Content Include="Views\Conversor\Opciones.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
