--- a/TareaProg4/TareaProg4.csproj
+++ b/TareaProg4/TareaProg4.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\PelisCategorias\Documental.cshtml" />
     <Content Include="Views\Form\Datos.cshtml" />
     <Content Include="Views\Conversor\Opciones.cshtml" />
+    <Content Include="Views\Contenido\Musica.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
