--- a/TareaProg4/TareaProg4.csproj
+++ b/TareaProg4/TareaProg4.csproj
@@ -185,10 +185,15 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\apple music.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\deezer.jpg" />
+    <Content Include="Content\grooveshark.png" />
+    <Content Include="Content\NAPSTER.png" />
+    <Content Include="Content\Spotify.png" />
     <Content Include="CSS\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
