Agregue la imagen y los datos personales del integrante Johan.. ajuste el ancho y el alto de estas imagenes. Agregue al menu de la pagina el Index de Acerca De. Hice un nuevo action y su vista llamados Noticias en el controlador Contenido.

--- a/TareaProg4/TareaProg4.csproj
+++ b/TareaProg4/TareaProg4.csproj
@@ -259,6 +259,7 @@
     <Content Include="Views\Conversor\Opciones.cshtml" />
     <Content Include="Views\Contenido\Musica.cshtml" />
     <Content Include="Views\AcercaDe\Index.cshtml" />
+    <Content Include="Views\Contenido\Noticias.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
